# edon

./: .gitignore  Cargo.toml
bootstrap/: main.ts
examples/: event-loop.rs
src/: compile.rs  compile_oxc.rs  compile_swc.rs  executor.rs  graph.rs  main.rs  swc.rs
src/builtin/: console.rs  fetch.rs  mod.rs  set_timeout.rs
src/runner/: console.rs  edon_fs.rs  mod.rs  modules.rs
src/runtime/: asynchronous.rs  constants.rs  init.rs  mod.rs  static_fn.rs
test/: test.ts  test1.ts  welcome.ts
