[package]
authors = ["roadup <roadup.cc@gmail.com>"]
edition = "2021"
name = "edon"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
colored = "2.1.0"
console-subscriber = "0.2.0"
env_logger = "0.10.1"
futures = "0.3.30"
log = "0.4.20"
queues = "1.1.0"
quote = "1.0.35"
regex = "1.10.2"
relative-path = "1.9.2"
reqwest = { version = "0.11.23", features = ["blocking"] }
serde_json = "1.0.111"
serde_v8 = "0.154.0"
# swc = "0.270.20"
# swc_common = { version = "0.33.12", features = ["tty-emitter"] }
# swc_ecma_ast = "0.110.17"
# swc_ecma_parser = "0.141.37"
# swc_ecma_visit = "0.96.17"
# swc_ecma_transforms_module = "0.178.16"
url = "2.5.0"
v8 = "0.82.0"
anyhow = "1.0.79"
tracing = "0.1.40"
# oxc 
oxc_allocator = "^0.6.0"
oxc_codegen = "^0.6.0"
oxc_parser = "^0.6.0"
oxc_transformer = "^0.6.0"
oxc_span= "^0.6.0"
oxc_ast = "^0.6.0"
oxc_semantic = "^0.6.0"

[dependencies.tokio]
features = ["full"]
version = "1.35.1"
