[package]
authors = ["roadup <roadup.cc@gmail.com>"]
edition = "2021"
name = "edon"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
colored = "2.1.0"
env_logger = "0.10.1"
futures = "0.3.30"
queues = "1.1.0"
quote = "1.0.35"
regex = "1.10.2"
relative-path = "1.9.2"
reqwest = { version = "0.11.23", features = ["blocking"] }
serde_json = "1.0.111"
serde_v8 = "0.154.0"
url = "2.5.0"
v8 = "0.82.0"
anyhow = "1.0.79"
# oxc 
oxc_allocator = "^0.6.0"
oxc_codegen = "^0.6.0"
oxc_parser = "^0.6.0"
oxc_transformer = "^0.6.0"
oxc_span= "^0.6.0"
oxc_ast = "^0.6.0"
oxc_semantic = "^0.6.0"

[dependencies.tokio]
features = ["full"]
version = "1.35.1"
