[package]
authors = ["roadup <roadup.cc@gmail.com>"]
edition = "2021"
name = "edon"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
colored = "2.1.0"
env_logger = "0.11.3"
futures = "0.3.30"
queues = "1.1.0"
quote = "1.0.36"
regex = "1.10.4"
relative-path = "1.9.3"
reqwest = { version = "0.12.4", features = ["blocking"] }
serde_json = "1.0.117"
serde_v8 = "0.182.0"
url = "2.5.0"
v8 = "0.89.0"
anyhow = "1.0.83"
# oxc 
oxc_allocator = "^0.13.0"
oxc_codegen = "^0.13.0"
oxc_parser = "^0.13.0"
oxc_transformer = "^0.13.0"
oxc_span = "^0.13.0"
oxc_ast = "^0.13.0"
oxc_semantic = "^0.13.0"

[dependencies.tokio]
features = ["full"]
version = "1.37.0"
